# apps/backend/src/features/feedback/feedback-model.ts
@@ -1,0 +1,9 @@
+export interface Feedback {
+  id: string;
+  userId: string;
+  productId: string;
+  rating: number;
+  comment: string;
+  createdAt: Date;
+  updatedAt: Date;
+}
